--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,7 +11,9 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
@@ -19,7 +21,7 @@ jobs:
           hugo-version: 'latest'
 
       - name: Build site
-        run: hugo
+        run: hugo --minify
 
       - name: Deploy to gh-pages branch
         uses: peaceiris/actions-gh-pages@v3
