--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,7 +3,7 @@ name: Deploy Hugo site to GitHub Pages
 on:
   push:
     branches:
-      - main  # main ブランチが更新されたときに実行
+      - main
 
 jobs:
   deploy:
@@ -18,13 +18,11 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.140.0'
+          hugo-version: '0.139.4'
+          extended: true
 
       - name: Build site
-        run:  hugo --minify --logLevel debug --verbose --printPathWarnings --printUnusedTemplates
-
-      - name: Display Hugo Log
-        run: cat hugo.log
+        run: hugo --minify --logLevel debug
 
       - name: Check file paths
         run: |
@@ -37,4 +35,3 @@ jobs:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           publish_dir: ./public
           publish_branch: gh-pages
-
