--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.139.4'
+          hugo-version: '0.140.0'
           extended: true
 
       - name: Build site
-        run: hugo --minify --logLevel debug
+        run: hugo --minify 
 
       - name: Check file paths
         run: |
