--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          submodules: recursive
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
@@ -21,13 +22,15 @@ jobs:
           hugo-version: '0.140.0'
           extended: true
 
-      - name: Build site
-        run: hugo --minify 
-
       - name: Check file paths
         run: |
           ls -R assets/
-          ls -R public/
+
+      - name: Build site
+        run: hugo --minify 
+
+      - name: Check public directory 
+        run:  ls -R public/
 
       - name: Deploy to gh-pages branch
         uses: peaceiris/actions-gh-pages@v3
