--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,9 @@ languageCode = 'ja'
 title = '雑記'
 theme = "PaperMod"
 
-paginate = 10                    # トップの件数
+[pagination]
+  pagerSize = 10
+
 
 [params]
   # 一部PaperMod固有の設定
@@ -12,6 +14,20 @@ paginate = 10                    # トップの件数
   disableSpecial1st = false # 特殊な1記事目デザインを無効化
   enableGitInfo = true # 更新日時を表示
   mainSections = ["post"]  # ホームに並べるセクション
+
+[menu]
+  [[menu.main]]
+    identifier = "categories"
+    name = "カテゴリ"
+    url = "/categories/"
+    weight = 10
+
+  [[menu.main]]
+    identifier = "tags"
+    name = "タグ"
+    url = "/tags/"
+    weight = 20
+
 #  customJS = ["js/copy.js"]
 #  copyCode = true
 #  customCSS = ["css/custom.css"]
