React 図追加 & dualboot 記事整備

--- a/hugo.toml
+++ b/hugo.toml
@@ -19,6 +19,10 @@ theme = "PaperMod"
   ShowReadingTime = true
   ShowShareButtons = true
   ShowCodeCopyButtons = true
+  showtoc = true
+  tocopen = true
+  customJS = ["js/bundle.js"]
+ 
   
 [markup]
   [markup.goldmark]
